# RustyMine

./: .gitignore  LICENSE  README.md
docs/: db.txt
src/backend/: AGENTS.md  Cargo.toml  build.rs  version.toml
src/backend/migrations/: 0001_init.sql  0002_create_users.sql  0003_create_perms.sql
src/backend/src/: config.rs  lib.rs  logging.rs  main.rs  state.rs
src/backend/src/auth/: mod.rs
src/backend/src/cli/: mod.rs
src/backend/src/core/: user_routines.rs
src/backend/src/domain/: mod.rs  repository.rs  server.rs  supervisor.rs  user.rs  user_prems.rs
src/backend/src/infra/db/: mod.rs  perms.rs  user.rs
src/backend/src/infrastructure/: config.rs  db.rs  mod.rs  routines.rs  server_repo.rs  sqlite_server_repo.rs  sqlite_user_repo.rs  state.rs  supervisor.rs  user_repo.rs
src/backend/src/interface/: api.rs  daemon.rs  mod.rs  protocol.rs  router.rs
src/backend/src/router/: middleware.rs  mod.rs  user_routes.rs
src/backend/src/utils/: mod.rs  validation.rs
src/frontend/: package.json  pnpm-lock.yaml  vite.config.ts
src/frontend/app/: routes.ts
src/frontend/app/components/: PageShell.tsx  sidebar.tsx
src/frontend/app/lib/: api.ts
src/frontend/app/routes/: dashboard.tsx  login.tsx
