[package]
name = "rustymine-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"]}
config = "0.15.19"
serde = "1.0.228"
tokio = { version="1.48.0", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["fmt", "env-filter"]}
uuid = "1.18.1"
