[package]
name = "rustymine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version="0.8.7", features = ["macros", "json"]}
chrono = { version = "0.4.42", features = ["serde"]}
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = {version = "1.48.0", features = ["full"]}
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
